--- a/Jonyboy.html
+++ b/Jonyboy.html
@@ -17,8 +17,8 @@
     <div class="container-fluid">
         <ul class="barra_superior">
             <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
-            <li class="indice"><a href="gatos.html">gatos</a></li>
-            <li class="indice"><a href="perros.html">perros</a></li>
+            <li class="indice"><a href="gatos.html">Gatos</a></li>
+            <li class="indice"><a href="perros.html">Perros</a></li>
         </ul>
         <div class="row">
             <div class="col-md-12 col-sm-12">
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 col-sm-12" style="text-align: center;">
-                <h1>gatos en adopción</h1>
+                
                 <img style="width: 200px; height:200px" src="img/GATO2.jpg">
                 <br>
                 <h2>Jony boy:</h2>
