--- a/gatos.html
+++ b/gatos.html
@@ -22,8 +22,8 @@
     <div class="container-fluid">
         <ul class="barra_superior">
             <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
-            <li class="indice"><a href="gatos.html">gatos</a></li>
-            <li class="indice"><a href="perros.html">perros</a></li>
+            <li class="indice"><a href="gatos.html">Gatos</a></li>
+            <li class="indice"><a href="perros.html">Perros</a></li>
         </ul>
         <div class="row">
             <div class="col-md-12 col-sm-12">
@@ -39,7 +39,6 @@
                         de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
                         en espera de su adopción definitiva. 
                     </p> 
-                        <h1>Gatos en adopción</h1><br>
                         <h3>Nuestros gatos que buscan familia!</h3>
                         <br>
                         <img style="width: 200px;height: 200px;" src="img/GATO1.jpg">
