--- a/pantallaprincipal.html
+++ b/pantallaprincipal.html
@@ -23,8 +23,8 @@
     <div class="container-fluid">
         <ul class="barra_superior">
             <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
-            <li class="indice"><a href="gatos.html" target="_blank">Gatos</a></li>
-            <li class="indice"><a href="perros.html" target="_blank">Perros</a></li>
+            <li class="indice"><a href="gatos.html">Gatos</a></li>
+            <li class="indice"><a href="perros.html">Perros</a></li>
         </ul>
         <div class="row">
             <div class="col-md-12 col-sm-12">
@@ -47,8 +47,8 @@
                 </p>
                 <h3 style="text-align: center;">Nuestra seccion de ayuda:</h3>
                 <br>
-                <img style="width: 300px;height: 300px;" src="img/perro1.jfif"><br><br>
-                <img style="width: 300px;height: 300px;" src="img/GATO1.jpg"></a>
+                <a href="perros.html"><img style="width: 300px;height: 300px;" src="img/perro1.jfif"></a><br><br>
+                <a href="gatos.html"><img style="width: 300px;height: 300px;" src="img/GATO1.jpg"></a>
             </div> 
         </div>
         <!--Banner inferior, aquí se muestran los datos de contacto-->
