--- a/diego.html
+++ b/diego.html
@@ -18,8 +18,8 @@
     <div class="container-fluid">
         <ul class="barra_superior">
             <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
-            <li class="indice"><a href="gatos.html">gatos</a></li>
-            <li class="indice"><a href="perros.html">perros</a></li>
+            <li class="indice"><a href="gatos.html">Gatos</a></li>
+            <li class="indice"><a href="perros.html">Perros</a></li>
         </ul>
         <div class="row">
            <div class="col-md-12 col-sm-12">
@@ -28,7 +28,7 @@
         </div> 
         <div class="row">
             <div class="col-md-12 col-sm-12" style="text-align:center">
-                <h1>Perros en adopción</h1>
+                
                 <img style="width: 200px; height:200px" src="img/perro3.jfif">
                 <br>
                 <h2>Diego</h2>
