--- a/perros.html
+++ b/perros.html
@@ -23,8 +23,8 @@
   <div class="container-fluid">
     <ul class="barra_superior">
         <li class="indice"><a href="pantallaprincipal.html">Inicio</a></li>
-        <li class="indice"><a href="gatos.html" target="_blank">gatos</a></li>
-        <li class="indice"><a href="perros.html">perros</a></li>
+        <li class="indice"><a href="gatos.html">Gatos</a></li>
+        <li class="indice"><a href="perros.html">Perros</a></li>
     </ul>
     <div class="row">
         <div class="col-md-12 col-sm-12">
@@ -40,7 +40,6 @@
                 de gatos y una red de hogares temporales, que acogen a los gatos rescatados 
                 en espera de su adopción definitiva.
             </p> 
-            <h1>Perros en adopción</h1>
             <h3>Nuestros perros que buscan familia!</h3>
             <img style="width: 200px;height: 200px;" src="img/perro1.jfif">
             <br>
